--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       display: inline-block;
       width: 200px;
       height: 200px;
-      background-color: green;
+      background-color: rgb(128, 98, 0);
     }
 
     .blue {
