--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 
     .cat {
       background-color: aquamarine;
-      
+      float: left;
     }
 
     .dog {
       background-color: coral;
+      float: right;
       
     }
 
