--- a/indexMQ.html
+++ b/indexMQ.html
@@ -31,7 +31,12 @@ TODO: Change the background color for each device
 
        @media (min-width: 481px) and (max-width: 1200px) {
        body {
-        background-color: powderblue;
+        background-color: limegreen;
+       }
+    }
+       @media (min-width: 1601px) {
+       body {
+        background-color: seagreen;
        }
      }
     
